src/authorship/snapshots/git_ai__authorship__authorship_log_serialization__tests__file_names_with_spaces-2.snap
---
source: src/authorship/authorship_log_serialization.rs
assertion_line: 991
expression: log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "src/my file.rs",
            entries: [
                AttestationEntry {
                    hash: "c9883b05a2487d6d",
                    line_ranges: [
                        Range(
                            1,
                            10,
                        ),
                    ],
                },
            ],
        },
        FileAttestation {
            file_path: "docs/README (copy).md",
            entries: [
                AttestationEntry {
                    hash: "c9883b05a2487d6d",
                    line_ranges: [
                        Single(
                            5,
                        ),
                    ],
                },
            ],
        },
        FileAttestation {
            file_path: "test/file-with-dashes.js",
            entries: [
                AttestationEntry {
                    hash: "c9883b05a2487d6d",
                    line_ranges: [
                        Range(
                            20,
                            25,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.1.0",
        git_ai_version: Some(
            "development",
        ),
        base_commit_sha: "",
        prompts: {
            "c9883b05a2487d6d": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "session_123",
                    model: "claude-3-sonnet",
                },
                human_author: None,
                messages: [],
                messages_url: None,
                total_additions: 0,
                total_deletions: 0,
                accepted_lines: 0,
                overriden_lines: 0,
                custom_attributes: None,
            },
        },
        humans: {},
    },
}
