src/authorship/snapshots/git_ai__authorship__authorship_log_serialization__tests__serialize_deserialize_no_attestations.snap
---
source: src/authorship/authorship_log_serialization.rs
assertion_line: 991
expression: serialized
---
"---\n{\n  \"schema_version\": \"authorship/3.1.0\",\n  \"git_ai_version\": \"development\",\n  \"base_commit_sha\": \"abc123\",\n  \"prompts\": {\n    \"c9883b05a2487d6d\": {\n      \"agent_id\": {\n        \"tool\": \"cursor\",\n        \"id\": \"session_123\",\n        \"model\": \"claude-3-sonnet\"\n      },\n      \"human_author\": null,\n      \"messages\": [],\n      \"total_additions\": 0,\n      \"total_deletions\": 0,\n      \"accepted_lines\": 0,\n      \"overriden_lines\": 0\n    }\n  }\n}"
