src/authorship/snapshots/git_ai__authorship__authorship_log_serialization__tests__serialize_deserialize_roundtrip-2.snap
---
source: src/authorship/authorship_log_serialization.rs
assertion_line: 876
expression: deserialized
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "src/file.xyz",
            entries: [
                AttestationEntry {
                    hash: "xyzAbc",
                    line_ranges: [
                        Single(
                            1,
                        ),
                        Single(
                            2,
                        ),
                        Range(
                            19,
                            222,
                        ),
                    ],
                },
                AttestationEntry {
                    hash: "123456",
                    line_ranges: [
                        Range(
                            400,
                            405,
                        ),
                    ],
                },
            ],
        },
        FileAttestation {
            file_path: "src/file2.xyz",
            entries: [
                AttestationEntry {
                    hash: "123456",
                    line_ranges: [
                        Range(
                            1,
                            111,
                        ),
                        Single(
                            245,
                        ),
                        Single(
                            260,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.1.0",
        git_ai_version: Some(
            "development",
        ),
        base_commit_sha: "abc123",
        prompts: {},
        humans: {},
    },
}
